--- a/index.html
+++ b/index.html
@@ -110,35 +110,35 @@
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work2.png " alt="">
+                        <img src="assets/img/work2.PNG" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name"></a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work3.png" alt="">
+                        <img src="assets/img/work3.PNG" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name"></a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work4.png" alt="">
+                        <img src="assets/img/work4.PNG" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name"></a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work5.png" alt="">
+                        <img src="assets/img/work5.PNG" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name"></a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work6.png" alt="">
+                        <img src="assets/img/work6.PNG" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name"></a>
