--- a/index.html
+++ b/index.html
@@ -163,14 +163,13 @@
                         <span class="contact__text">Ormoc City Leyte, Philippines</span>
                     </div>
 
-                    <form action="" class="contact__form">
-                        <div class="contact__inputs">
+                   <form action="" class="contact__form">
+                            <div class="contact_subtitle"></div>
+                            <h2 class="section-title">Contact Me</h2>
                             <input type="text" placeholder="Name" class="contact__input">
                             <input type="mail" placeholder="Email" class="contact__input">
+                            <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
                         </div>
-
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-
                         <input type="submit" value="Submit" class="contact__button">
                     </form>
                 </div>
